--- a/nobu_mod_base_mod_override_bgm.html
+++ b/nobu_mod_base_mod_override_bgm.html
@@ -18,7 +18,7 @@
  <h3>ファイル形式変換例</h3>
     <fieldset class="code">
     <legend>ffmpegでのWMAへの変換例</legend>
-    <pre class="brush:ps;">
+    <pre class="brush:text;">
 ffmpeg -i input.m4a -acodec wmav2 -b:a 320k output.wma
     </pre>
   </fieldset>
