--- a/nobu_mod_modupdater.html
+++ b/nobu_mod_modupdater.html
@@ -25,8 +25,8 @@
                 </div>
             </div>
         </div>
-        <fieldset class="alert">
-            <legend><i class="fa fa-warning fa-fw"></i>ダウンロードした後、<mark>解凍する前</mark>に、zipを「ブロック解除(or 許可する)」必須</legend>
+        <fieldset class="alert alert-info">
+            <legend>ダウンロードした後、<mark>解凍する前</mark>に、zipを「ブロック解除(or 許可する)」必須</legend>
             <p>zipを解凍する際には、「プロパティ」から「ブロック解除(or 許可する)」してください。<br>
                 「プロパティ」に「ブロック解除(or 許可する)」といった項目が無いようならこの作業は不要です。</p>
             <p><img src="./cnt_mod/cnt_mod_init_05.png"></p>
