注意書き追加

--- a/nobu_mod_base_mod_override_bushou_pic.html
+++ b/nobu_mod_base_mod_override_bushou_pic.html
@@ -37,9 +37,16 @@
       <div class="row">
         <div class="col-12"><small>(github リポジトリ)</small></div>
       </div>
-      <a href="https://github.com/tenshoukijp/nobu10_tool_colorreducer/releases" class="btn btn-primary"><i class="fa fa-download fa-fw"></i>ColorReducer.zip</a>
+      <a href="https://github.com/tenshoukijp/nobu10_tool_colorreducer/releases" class="btn btn-primary"><i class="fa fa-download fa-fw"></i>ColorReducer.zip</a><br>
     </div>
   </div>
+  <p>
+    <fieldset class="alert alert-info">
+        <legend>ウィルスチェッカーが誤検知する場合</legend>
+        <p>ColorReducer.zip だとウィルスチェッカーが誤検知する、といった場合は、ColorReducer.tar、ColorReducer.gz、ColorReducer.7z などをダウンロードし、解凍を試みてください。<br>
+ 全てでウィルスチェッカーが誤検知する、といったことは無いかと思われます。<br>
+    </fieldset>
+  </p>
 
   <p>これは、もともとは、iZYINS というプログラムで、「xPadie」や「Yukari」の元となるアルゴリズムと同じ減色アルゴリズムを持ったものです。<br>
     それをModで使いやすいように、「*.png」があれば、それを一括で減色して「*.bmp」する、という機能を付け加えたものとなります。<br>
@@ -53,4 +60,11 @@
   <img src="cnt_mod/cnt_mod_colorreducer_01.png">
   <p>蒼天録では、各々の画像に対して、それぞれのファイルが<mark>異なる「最適化256色パレット」</mark>にて減色できるため、かなり綺麗に減色できるハズです。</p>
   <img src="cnt_mod/cnt_mod_colorreducer_02.png">
+</div>
+
+<div class="content-box mb-3 content-lighten">
+  <h3>どの武将や姫が何番の顔グラなのか？</h3>
+  <p><a href="?page=nobu_data_bushoulist">武将一覧のEXCELファイル</a>に武将や姫に対応した「顔番号」が掲載されていますので、<br>
+  そちらで確認してください。</p>
+  
 </div>
