--- a/index_STR.html
+++ b/index_STR.html
@@ -38,6 +38,7 @@
     <h2><i class="fa fa-reorder fa-fw"></i>目次</h2>
     <ul>
         <li><a href="./"><i class="fa fa-home fa-fw"></i><span id="nobu_str_home">ホーム</span></a></li>
+        <li><a href="?page=nobu_data_bushoulist"><i class="fa fa-file-excel-o fa-fw"></i><span id="nobu_data_bushoulist">武将一覧</span></a></li>
         <li>
             <a href="#"><i class="fa fa-plug fa-fw"></i>蒼天録.mod</a>
             <h2><i class="fa fa-plug fa-fw"></i>蒼天録.mod</h2>
