--- a/index_STR.html
+++ b/index_STR.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet" type="text/css" href="./jquery/jquery.multilevelpushmenu.min.css?v=%(mlpmcssdate)s">
 %(style_dynamic)s
 %(shcore_head)s
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body class="sitebody">
