--- a/nobu_mod_base_mod_override_bushou_pic.html
+++ b/nobu_mod_base_mod_override_bushou_pic.html
@@ -13,12 +13,12 @@
   もちろん対応はしていますが、<br>
   そのような方法では「受け渡し」には便利かもしれませんが、実際に自分で顔グラを入れ替える、という意味では<br>
 何がどう入れ替わったのか管理しにくいので不便でしょう。<br>
-</div>
+</p></div>
 
 <div class="content-box mb-3 content-lighten">
   <h3>KAOCG.NBXの何番目が読み込まれたのか？ に対応する画像を用意する</h3>
 0000.bmp ～ 2183.bmp ファイルを配置しておけば、そのファイルが優先的に採用されます。<br>
-これは実際のゲーム内の顔番号であり、シナリオデータの顔番号でもあります。</p>
+これは実際のゲーム内の顔番号であり、シナリオデータの顔番号でもあります。<p></p>
 </div>
 
 <div class="content-box mb-3 content-lighten">
@@ -41,21 +41,21 @@
     </div>
   </div>
   <p>
-    <fieldset class="alert alert-info">
+    </p><fieldset class="alert alert-info">
         <legend>ウィルスチェッカーが誤検知する場合</legend>
         <p>ColorReducer.zip だとウィルスチェッカーが誤検知する、といった場合は、ColorReducer.tar、ColorReducer.exe.gz、ColorReducer.7z などをダウンロードし、解凍を試みてください。<br>
  全てでウィルスチェッカーが誤検知する、といったことは無いかと思われます。<br>
-    </fieldset>
-  </p>
+    </p></fieldset>
+  <p></p>
 
   <p>これは、もともとは、iZYINS というプログラムで、「xPadie」や「Yukari」の元となるアルゴリズムと同じ減色アルゴリズムを持ったものです。<br>
     それをModで使いやすいように、「*.png」があれば、それを一括で減色して「*.bmp」する、という機能を付け加えたものとなります。<br>
-    <ul>
+    </p><ul>
       <li>元々の iZYINSのコマンドラインとしての引数も全て受け付けます</li>
       <li>Optpixほどではないですが、今回のようなケースですと、かなり良い減色結果が得られます</li>
       <li>Photoshopよりはやや綺麗、Gimpとは比較にならないほど美しい仕上がりとなります</li>
     </ul>
-  </p>
+  <p></p>
   <h3>****.png と 同じフォルダに ColorReducer.exe を配置。実行すると減色された ****.bmp が出来上がる</h3>
   <img src="cnt_mod/cnt_mod_colorreducer_01.png">
   <p>蒼天録では、各々の画像に対して、それぞれのファイルが<mark>異なる「最適化256色パレット」</mark>にて減色できるため、かなり綺麗に減色できるハズです。</p>
