--- a/nobu_mod_base_mod_override_movie.html
+++ b/nobu_mod_base_mod_override_movie.html
@@ -17,8 +17,7 @@
   <h3>ファイル形式変換例</h3>
   <fieldset class="code">
     <legend>ffmpegでのMPEG1への変換例</legend>
-    <pre class="brush:text;">
-ffmpeg -i input.mov -c:v mpeg1video -b:v 10M -minrate 10M -maxrate 10M -bufsize 10M OP.mpg
+    <pre class="brush:text;">ffmpeg -i input.mov -c:v mpeg1video -b:v 10M -minrate 10M -maxrate 10M -bufsize 10M OP.mpg
     </pre>
   </fieldset>
 </div>
