--- a/nobu_mod_base_mod_override_bushou_pic.html
+++ b/nobu_mod_base_mod_override_bushou_pic.html
@@ -31,7 +31,7 @@
 <div class="content-box mb-3 content-lighten">
   <h3>PNGファイル群を一括で「最適に減色して*.bmpにする」ツール「ColorReducer」</h3>
   <p>OptPixを所持している人は、ここを読む必要はありません。次の項目に進んでください。</p>
-  <div class="card mb-3 ml-3" style="max-width: 30rem;">
+  <div class="card mb-3 ms-3" style="max-width: 30rem;">
     <!-- カード本文：card-body -->
     <div class="card-body text-center">
       <div class="row">
